--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
   "C_Cpp.errorSquiggles": "Disabled",
   "files.associations": {
     "ostream": "cpp",
-    "iostream": "cpp"
+    "iostream": "cpp",
+    "vector": "cpp",
+    "string": "cpp",
+    "__locale": "cpp"
   }
 }
